# Viktor_ffmpeg

./: .gitignore  README.md  build.gradle  gradle.properties  settings.gradle
gradle/wrapper/: gradle-wrapper.properties
sample/: build.gradle
sample/src/main/: AndroidManifest.xml
sample/src/main/java/com/viktor/fg/: MainActivity.kt  VideoPlayActivity.kt  ViktorApplication.kt
sample/src/main/java/com/viktor/fg/adapter/: AlbumMediaAdapter.kt  AlbumsAdapter.kt
sample/src/main/java/com/viktor/fg/loader/: AlbumCategory.kt  AlbumCategoryManager.kt  AlbumMediaManager.kt  CursorAdapter.kt  Media.kt  SelectMedia.kt
sample/src/main/java/com/viktor/fg/select/: MediaItemFragment.kt  MediaSelectActivity.kt
sample/src/main/java/com/viktor/fg/ui/: AlbumsCategorySpinner.kt
sample/src/main/java/com/viktor/fg/util/: ViktorConstants.kt  ViktorUtil.kt
sample/src/main/java/com/viktor/sdk/: ViktorAny.kt
sample/src/main/java/com/viktor/sdk/clip/: ViktorAudioClip.kt  ViktorClip.kt  ViktorVideoClip.kt
sample/src/main/java/com/viktor/sdk/impl/: IRenderCallback.kt  IViktorCallback.kt
sample/src/main/java/com/viktor/sdk/timeline/: ViktorActuator.kt  ViktorTimeline.kt
sample/src/main/java/com/viktor/sdk/track/: ViktorAudioTrack.kt  ViktorTrack.kt  ViktorVideoTrack.kt
sample/src/main/java/com/viktor/sdk/view/: ViktorSurfaceView.kt  ViktorVideoView.kt
sample/src/main/native/: CMakeLists.txt
sample/src/main/native/all/: ff_define.h  viktor_matrix.cpp  viktor_matrix.h  vk_all.cpp  vk_all.h
sample/src/main/native/all/filter/: viktor_base_filter.cpp  viktor_base_filter.h  viktor_filter_color.cpp  viktor_filter_color.h  viktor_rotate_filter.cpp  viktor_rotate_filter.h
sample/src/main/native/viktor_sdk/ffplay/: ff_egl.cpp  ff_egl.h  ff_egl_renderer.cpp  ff_egl_renderer.h  ff_egl_renderer_rgb.cpp  ff_egl_renderer_rgb.h  ff_egl_renderer_yuv420p.cpp  ff_egl_renderer_yuv420p.h  ff_frame_queue.cpp  ff_frame_queue.h  ff_opensles.cpp  ff_opensles.h  ff_pkt_queue.cpp  ff_pkt_queue.h  ff_renderer.cpp  ff_renderer.h  ff_sdl.cpp  ff_sdl.h  ff_struct.cpp  ff_struct.h  ff_video_texture.cpp  ff_video_texture.h  soundtouch_wrap.cpp  soundtouch_wrap.h
sample/src/main/native/viktor_sdk/timeline/: native_timeline.cpp  native_timeline.h  native_viktor_actuator.cpp  native_viktor_actuator.h  native_viktor_audio_clip.cpp  native_viktor_audio_clip.h  native_viktor_audio_track.cpp  native_viktor_audio_track.h  native_viktor_video_clip.cpp  native_viktor_video_clip.h  native_viktor_video_track.cpp  native_viktor_video_track.h
sample/src/main/native/viktor_sdk/timeline/clang/: CAudioClip.cpp  CAudioClip.h  CAudioTrack.cpp  CAudioTrack.h  CClip.cpp  CClip.h  CTimeline.cpp  CTimeline.h  CTimelineWrapper.cpp  CTimelineWrapper.h  CVideoClip.cpp  CVideoClip.h  CVideoTrack.cpp  CVideoTrack.h
sample/src/main/native/viktor_sdk/timeline/context/: viktor_context.cpp  viktor_context.h  viktor_frame_queue.cpp  viktor_frame_queue.h  viktor_packet_queue.cpp  viktor_packet_queue.h  viktor_sdl.cpp  viktor_sdl.h
sample/src/main/native/viktor_sdk/timeline/decode/: IViktorDecode.cpp  IViktorDecode.h  ViktorAudioDecode.cpp  ViktorAudioDecode.h  ViktorDecodeWrapper.cpp  ViktorDecodeWrapper.h  ViktorVideoDecode.cpp  ViktorVideoDecode.h
sample/src/main/native/viktor_sdk/timeline/demux/: ViktorDemux.cpp  ViktorDemux.h
sample/src/main/native/viktor_sdk/timeline/display/: ViktorVideoDisplay.cpp  ViktorVideoDisplay.h
sample/src/main/native/viktor_sdk/timeline/util/: ViktorCommon.cpp  ViktorCommon.h  ViktorLog.h  jni_help.c  jni_help.h
sample/src/main/res/color/: selector_color_done.xml
sample/src/main/res/drawable/: seek_bar_video_bg.xml  selector_btn_done.xml  selector_media_select.xml  selector_video_state.xml  shape_album_list_view_bg.xml  shape_done_state_checked.xml  shape_done_state_normal.xml  shape_placeholder.xml  shape_seek_video_thumb.xml
sample/src/main/res/layout/: activity_main.xml  activity_media_select.xml  activity_video_play.xml  album_list_item.xml  fragment_media_list.xml  layout_media_item.xml
sample/src/main/res/values/: colors.xml  dimens.xml  strings.xml  themes.xml
